# JackRussell

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Code_Coverage.yml  clang_format.yml  cmake.yml  codeql.yml  cppcheck.yml  flawfinder.yml
example/: CMakeLists.txt
example/example1/: CMakeLists.txt  main.cpp
example/example2/: CMakeLists.txt  main.cpp
include/: AbstractSubscriber.h  AbstractTopic.h  JackRussellConfig.h.in  ResultCode.h  Subscriber.h  Subscriber.hpp  SyncTopic.hpp  Topic.h  Topic.hpp  TopicManager.h
src/: AbstractSubscriber.cpp  AbstractTopic.cpp  Subscriber.cpp  Topic.cpp  TopicManager.cpp
test/: AbstractTopicTest.cpp  CMakeLists.txt  MockSubscriber.h  MockTopic.h  TopicManagerTest.cpp  main.cpp
